ssh-sg.tf
##############################
# security groups
##############################

# Create a security group for SSH
resource "aws_security_group" "allow_ssh-sg" {
  vpc_id      = "${aws_vpc.self.id}"
  name        = "${var.environment}-allow_ssh-sg"
  description = "Allow SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "${var.environment}-allow_ssh-sg"
  }
}
